--- a/gossip.html
+++ b/gossip.html
@@ -29,8 +29,8 @@
     <article class="left_article">
       <h3>What's beyond linear?</h3>
       <p>
-          <a href="http://modelingcommons.org/browse/one_model/6713">
-              netLogo Virus 1</a>  <!--http://modelingcommons.org/browse/one_model/6713?embedded=true -->
+          <a href="gossip-code.html">
+              netLogo Gossip</a>  <!--http://modelingcommons.org/browse/one_model/6713?embedded=true -->
         <!-- I want my iframe here...
  <iframe src="http://modelingcommons.org/browse/one_model/6713?embedded=true" />-->
             </p>
