--- a/gossip.html
+++ b/gossip.html
@@ -29,7 +29,7 @@
     <article class="left_article">
       <h3>What's beyond linear?</h3>
       <p>
-          <a href="gossip-code.html">
+          <a href="Linearvirus.html">
               netLogo Gossip</a>  <!--http://modelingcommons.org/browse/one_model/6713?embedded=true -->
         <!-- I want my iframe here...
  <iframe src="http://modelingcommons.org/browse/one_model/6713?embedded=true" />-->
