--- a/gossip.html
+++ b/gossip.html
@@ -30,9 +30,7 @@
       <h3>What's beyond linear?</h3>
       <p>
           <a href="Linearvirus.html">
-              netLogo Gossip</a>  <!--http://modelingcommons.org/browse/one_model/6713?embedded=true -->
-        <!-- I want my iframe here...
- <iframe src="http://modelingcommons.org/browse/one_model/6713?embedded=true" />-->
+              netLogo Gossip</a>
             </p>
       <p>
           Do viruses (gossip, viral video views) grow linearly?
