--- a/gossip.html
+++ b/gossip.html
@@ -29,7 +29,8 @@
     <article class="left_article">
       <h3>What's beyond linear?</h3>
       <p>
-          <a href="Linearvirus.html">
+        <iframe src="Linearvirus.html" title="netLogo Gossip NOT" height="200" width="300">
+         <!-- <a href="Linearvirus.html"> -->
               netLogo Gossip</a>
             </p>
       <p>
