--- a/gossip.html
+++ b/gossip.html
@@ -30,7 +30,7 @@
       <h3>What's beyond linear?</h3>
       <p>
         there should be an iframe here
-        <iframe src="Linearvirus.html" title="netLogo Gossip NOT" height="700" width="700" zoom="0.75">
+        <iframe src="Linearvirus.html" title="netLogo Gossip NOT" height="200" width="200" >
          <!-- <a href="Linearvirus.html"> -->
               netLogo Gossip</a>
             </p>
