--- a/gossip.html
+++ b/gossip.html
@@ -29,7 +29,7 @@
     <article class="left_article">
       <h3>What's beyond linear?</h3>
       <p>
-        there should be an iframe here
+        there should be an iframe here.  Right?
         <br>
         <br>
         <iframe src="Linearvirus.html" title="netLogo Gossip NOT" height="300" width="300" >
