--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <nav class="secondary_header" id="menu">
       <ul>
-        <li><a href="index.html">Models</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="virus.html">Virus</a></li>
         <li><a href="daylight.html">Daylight</a></li>
         <li><a href="swish.html">Swish!</a></li>
@@ -31,9 +31,11 @@
       <p>Although you've been learning about linear models since kindergarten, the world we live in is not linear.</p>
       <p>Maybe you don't believe that.  Let's check it out.</p>
     </article>
+    <!--
     <aside class="right_article">
         <img src="pexels-karolina-grabowska-6256066.jpg" alt="Photo by Katerina Holmes from Pexels / Photo by Karolina Grabowska from Pexels" width="400" height="200" class="placeholder"/>
       </aside>
+-->
   </section>
   <div class="row">
     <div class="columns">
@@ -73,6 +75,7 @@
     </div>
   </div>
   <div class="social">
+    <!--
     <p class="social_icon">
         <img src="bkg_06.jpg" width="100" alt="" class="thumbnail"/></p>
     <p class="social_icon">
@@ -81,6 +84,7 @@
         <img src="bkg_06.jpg" width="100" alt="" class="thumbnail"/></p>
     <p class="social_icon">
         <img src="bkg_06.jpg" width="100" alt="" class="thumbnail"/></p>
+-->
   </div>
   <footer class="secondary_header footer">
     <div class="copyright">&copy;2020 - <strong>SIMPLE Theme, Adobe DreamWeaver</strong></div>
