--- a/gossip.html
+++ b/gossip.html
@@ -30,28 +30,22 @@
       <h3>What's beyond linear?</h3>
       <p>
         there should be an iframe here.  Right?
-        <br>
-        <br>
-        <iframe src="Linearvirus.html" title="netLogo Gossip NOT" style="height:700; width:100%;" >
-         <!-- <a href="Linearvirus.html"> -->
-              netLogo Gossip</a>
-            </p>
-      <p>
-          Does gossip spread linearly?
-        </p>
+      </p>
+  
     </article>
     <aside class="right_article"><img src="pexels-photo-6936406.jpeg" alt="Photo by RODNAE Productions from Pexels" width="400" height="200" class="placeholder"/>
         </aside>
   </section>
+  <div>
+          <iframe src="Linearvirus.html" title="netLogo Gossip NOT" style="height:700; width:100%;" >
+            </div>
   <div class="row">
     <div class="columns">
       <p class="thumbnail_align"> <img src="pexels-cdc-3992943.jpg" alt="Photo by CDC from Pexels" class="thumbnail"/> </p>
       <h4>Virus</h4>
         <p>
            <a href="http://modelingcommons.org/browse/one_model/6713">
-              netLogo Virus 1</a>  <!--http://modelingcommons.org/browse/one_model/6713?embedded=true -->
-        <!-- I want my iframe here...
- <iframe src="http://modelingcommons.org/browse/one_model/6713?embedded=true" />-->
+              netLogo Virus 1</a>  
             </p>
       <p>Do viruses (gossip, viral video views) grow linearly?</p>
     </div>
