--- a/gossip.html
+++ b/gossip.html
@@ -36,7 +36,7 @@
     <aside class="right_article"><img src="pexels-photo-6936406.jpeg" alt="Photo by RODNAE Productions from Pexels" width="400" height="200" class="placeholder"/>
         </aside>
   </section>
-  <div>
+  <div class="row">
           <iframe src="Linearvirus.html" title="netLogo Gossip NOT" style="height:700; width:100%;" >
             </div>
   <div class="row">
