--- a/gossip.html
+++ b/gossip.html
@@ -37,7 +37,7 @@
         </aside>
   </section>
   <div class="row">
-          <iframe src="Linearvirus.html" title="netLogo Gossip NOT" style="height:1700; width:100%;" >
+          <iframe src="Linearvirus.html" title="netLogo Gossip NOT" >
             </div>
   <div class="row">
     <div class="columns">
