--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="columns">
       <p class="thumbnail_align">
           <img src="pexels-cdc-3992943.jpg" alt="Photo by CDC from Pexels" class="thumbnail"/> </p>
-      <p>Virus</p>
+      <h4>Virus</h4>
       <p>Do viruses (gossip, viral video views) grow linearly?</p>
     </div>
     <div class="columns">
