--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
     </div>
     <div class="columns">
       <p class="thumbnail_align">
-          <img src="pexels-abdullah-ghatasheh-1631678.jpg" alt="Photo by Abdullah Ghatasheh from Pexels" class="thumbnail"/>
-        </p>
+          <img src="pexels-abdullah-ghatasheh-1631678.jpg" alt="Photo by Abdullah Ghatasheh from Pexels" class="thumbnail"/></p>
       <h4>Daylight</h4>
       <p>Does daylight grow linearly?</p>
     </div>
