--- a/gossip.html
+++ b/gossip.html
@@ -37,8 +37,8 @@
         </aside>
   </section>
   <div class="row">
-          <iframe src="Linearvirus.html" title="netLogo Gossip NOT" height="800">
-            </div>
+    <iframe src="Linearvirus.html" title="netLogo Gossip NOT" height="800"></iframe>
+  </div>
   <div class="row">
     <div class="columns">
       <p class="thumbnail_align"> <img src="pexels-cdc-3992943.jpg" alt="Photo by CDC from Pexels" class="thumbnail"/> </p>
