--- a/gossip.html
+++ b/gossip.html
@@ -37,7 +37,7 @@
         </aside>
   </section>
   <div class="row">
-    <iframe src="Linearvirus.html" title="netLogo Gossip NOT" height="800"></iframe>
+    <iframe src="Linearvirus.html" title="netLogo Gossip NOT" height="950" width="100%"></iframe>
   </div>
   <div class="row">
     <div class="columns">
