--- a/gossip.html
+++ b/gossip.html
@@ -37,7 +37,7 @@
         </aside>
   </section>
   <div class="row">
-    <iframe src="Linearvirus.html" title="netLogo Gossip NOT" height="950" width="100%"></iframe>
+    <iframe src="Linearvirus.html" title="netLogo Gossip NOT" height="1050" width="1000"></iframe>
   </div>
   <div class="row">
     <div class="columns">
@@ -83,7 +83,7 @@
   </div>
 -->
   <footer class="secondary_header footer">
-    <div class="copyright">&copy;2020 - <strong>SIMPLE Theme, Adobe DreamWeaver</strong></div>
+    <div class="copyright">&copy;2020 - SIMPLE Theme, Adobe DreamWeaver</div>
   </footer>
 </div>
 </body>
