--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <article class="left_article">
       <h3>What's beyond linear?</h3>
       <p>Although you've been learning about linear models since kindergarten, the world we live in is not linear.</p>
-      <p>Maybe you don't believe that.  Let's check it out.</p>
+      <p>Maybe you don't believe that.  Let's take a look</p>
+      <p>Click on the "virus" image below or the link above to investigate virus growth.</p>
     </article>
     <!--
     <aside class="right_article">
@@ -40,28 +41,39 @@
   <div class="row">
     <div class="columns">
       <p class="thumbnail_align">
-          <img src="pexels-cdc-3992943.jpg" alt="Photo by CDC from Pexels" class="thumbnail"/> </p>
+          <a href="virus.html">
+            <img src="pexels-cdc-3992943.jpg" alt="Photo by CDC from Pexels" class="thumbnail"/>
+        </a>
+      </p>
       <h4>Virus</h4>
-      <p>Do viruses (gossip, viral video views) grow linearly?</p>
+      <p>Do viruses grow linearly?</p>
     </div>
     <div class="columns">
       <p class="thumbnail_align">
-          <img src="pexels-abdullah-ghatasheh-1631678.jpg" alt="Photo by Abdullah Ghatasheh from Pexels" class="thumbnail"/></p>
+        <a href="daylight.html">
+          <img src="pexels-abdullah-ghatasheh-1631678.jpg" alt="Photo by Abdullah Ghatasheh from Pexels" class="thumbnail"/>
+        </a>
+      </p>
       <h4>Daylight</h4>
-      <p>Does daylight grow linearly?</p>
+      <p>Does daylight increase constantly?</p>
     </div>
     <div class="columns">
       <p class="thumbnail_align">
+        <a href="swish.html">
           <img src="pexels-rodnae-productions-5837020.jpg" alt="Photo by RODNAE Productions from Pexels" class="thumbnail"/>
-        </p>
+        </a>
+      </p>
       <h4>Swish!</h4>
       <p>Does a free-throw's height increase linearly?</p>
     </div>
     <div class="columns">
       <p class="thumbnail_align">
-          <img src="pexels-photo-6936406.jpeg" alt="Photo by RODNAE Productions from Pexels" class="thumbnail"/> </p>
+        <a href="gossip.html">
+          <img src="pexels-photo-6936406.jpeg" alt="Photo by RODNAE Productions from Pexels" class="thumbnail"/>
+        </a>
+      </p>
       <h4>Gossip</h4>
-      <p>How quickly does gossip spread</p>
+      <p>How quickly does gossip spread?</p>
         <!-- Does a virus decay linearly once a vaccine is developed? -->
     </div>
   </div>
