--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 -->
   </div>
   <footer class="secondary_header footer">
-    <div class="copyright">&copy;2020 - <strong>SIMPLE Theme, Adobe DreamWeaver</strong></div>
+    <div class="copyright">&copy;2020 - SIMPLE Theme, Adobe DreamWeaver</div>
   </footer>
 </div>
 </body>
