--- a/daylight.html
+++ b/daylight.html
@@ -28,44 +28,48 @@
     <h2 class="noDisplay">Main Content</h2>
     <article class="left_article">
       <h3>What's beyond linear?</h3>
-      <p>
-          <a href="http://modelingcommons.org/browse/one_model/6713">
-              netLogo Virus 1</a>  <!--http://modelingcommons.org/browse/one_model/6713?embedded=true -->
-        <!-- I want my iframe here...
- <iframe src="http://modelingcommons.org/browse/one_model/6713?embedded=true" />-->
-            </p>
-        <p>
+      <h4>
           This model is under construction.
-        </p>
+      </h4>
     </article>
     <aside class="right_article"><img src="pexels-abdullah-ghatasheh-1631678.jpg" alt="Photo by RODNAE Productions from Pexels" width="400" height="200" class="placeholder"/> </aside>
   </section>
-  <div class="row">
+   <div class="row">
     <div class="columns">
-      <p class="thumbnail_align"> <img src="pexels-cdc-3992943.jpg" alt="Photo by CDC from Pexels" class="thumbnail"/> </p>
+      <p class="thumbnail_align">
+          <a href="virus.html">
+            <img src="pexels-cdc-3992943.jpg" alt="Photo by CDC from Pexels" class="thumbnail"/>
+        </a>
+      </p>
       <h4>Virus</h4>
-        <p>
-           <a href="http://modelingcommons.org/browse/one_model/6713">
-              netLogo Virus 1</a>  <!--http://modelingcommons.org/browse/one_model/6713?embedded=true -->
-        <!-- I want my iframe here...
- <iframe src="http://modelingcommons.org/browse/one_model/6713?embedded=true" />-->
-            </p>
-      <p>Do viruses (gossip, viral video views) grow linearly?</p>
+      <p>Do viruses grow linearly?</p>
     </div>
     <div class="columns">
-      <p class="thumbnail_align"> <img src="pexels-abdullah-ghatasheh-1631678.jpg" alt="Photo by Abdullah Ghatasheh from Pexels" class="thumbnail"/> </p>
+      <p class="thumbnail_align">
+        <a href="daylight.html">
+          <img src="pexels-abdullah-ghatasheh-1631678.jpg" alt="Photo by Abdullah Ghatasheh from Pexels" class="thumbnail"/>
+        </a>
+      </p>
       <h4>Daylight</h4>
-      <p>Does daylight grow linearly?</p>
+      <p>Does daylight increase constantly?</p>
     </div>
     <div class="columns">
-      <p class="thumbnail_align"> <img src="pexels-rodnae-productions-5837020.jpg" alt="Photo by RODNAE Productions from Pexels" class="thumbnail"/> </p>
+      <p class="thumbnail_align">
+        <a href="swish.html">
+          <img src="pexels-rodnae-productions-5837020.jpg" alt="Photo by RODNAE Productions from Pexels" class="thumbnail"/>
+        </a>
+      </p>
       <h4>Swish!</h4>
       <p>Does a free-throw's height increase linearly?</p>
     </div>
     <div class="columns">
-      <p class="thumbnail_align"> <img src="pexels-photo-6936406.jpeg" alt="Photo by RODNAE Productions from Pexels" class="thumbnail"/> </p>
+      <p class="thumbnail_align">
+        <a href="gossip.html">
+          <img src="pexels-photo-6936406.jpeg" alt="Photo by RODNAE Productions from Pexels" class="thumbnail"/>
+        </a>
+      </p>
       <h4>Gossip</h4>
-      <p>How qquickly does gossip spread</p>
+      <p>How quickly does gossip spread?</p>
         <!-- Does a virus decay linearly once a vaccine is developed? -->
     </div>
   </div>
