--- a/gossip.html
+++ b/gossip.html
@@ -29,18 +29,18 @@
     <article class="left_article">
       <h3>What's beyond linear?</h3>
       <p>
-        there should be an iframe here.  Right?
+        The gossip model is under construction.
       </p>
   
     </article>
     <aside class="right_article"><img src="pexels-photo-6936406.jpeg" alt="Photo by RODNAE Productions from Pexels" width="400" height="200" class="placeholder"/>
-        </aside>
+    </aside>
   </section>
-   <div class="row">
+  <div class="row">
     <div class="columns">
       <p class="thumbnail_align">
-          <a href="virus.html">
-            <img src="pexels-cdc-3992943.jpg" alt="Photo by CDC from Pexels" class="thumbnail"/>
+        <a href="virus.html">
+          <img src="pexels-cdc-3992943.jpg" alt="Photo by CDC from Pexels" class="thumbnail"/>
         </a>
       </p>
       <h4>Virus</h4>
