--- a/swish.html
+++ b/swish.html
@@ -28,9 +28,9 @@
     <h2 class="noDisplay">Main Content</h2>
     <article class="left_article">
       <h3>What's beyond linear?</h3>
-      <h4>
+      <p>
             This model is under construction.
-      </h4>
+      </p>
     </article>
     <aside class="right_article"><img src="pexels-rodnae-productions-5837020.jpg" alt="Photo by RODNAE Productions from Pexels" width="400" height="200" class="placeholder"/> </aside>
   </section>
@@ -75,10 +75,10 @@
   </div>
   <div class="row blockDisplay">
     <div class="column_half left_half">
-      <h2 class="column_title">Something else</h2>
+      <h2 class="column_title"></h2>
     </div>
     <div class="column_half right_half">
-      <h2 class="column_title">will go here!</h2>
+      <h2 class="column_title"></h2>
     </div>
   </div>
   <div class="social">
