--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link href="BBAnonLinearityMS.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inder">
 </head>
+    <!-- - - - - - - - - - - - BODY STARTS HERE - - - - - - - - - - - - --->
 <body>
 <div class="container">
   <header>
@@ -24,13 +25,14 @@
       </ul>
     </nav>
   </header>
+    <!-- - - - - - - - - - - - BODY STARTS HERE - - - - - - - - - - - - --->
   <section>
     <h2 class="noDisplay">Main Content</h2>
     <article class="left_article">
       <h3>What's beyond linear?</h3>
       <p>Although you've been learning about linear models since kindergarten, the world we live in is not linear.</p>
       <p>Maybe you don't believe that.  Let's take a look</p>
-      <p>Click on the "virus" image below or the link above to investigate virus growth.</p>
+      <p>Click on the "virus" image below or the link above to investigate how a virus spreads.</p>
     </article>
     <!--
     <aside class="right_article">
@@ -38,6 +40,7 @@
       </aside>
 -->
   </section>
+    <!-- - - - - - - - - - - - BODY STARTS HERE - - - - - - - - - - - - --->
   <div class="row">
     <div class="columns">
       <p class="thumbnail_align">
@@ -77,6 +80,7 @@
         <!-- Does a virus decay linearly once a vaccine is developed? -->
     </div>
   </div>
+    <!-- - - - - - - - - - - - BODY STARTS HERE - - - - - - - - - - - - --->
   <div class="row blockDisplay">
     <div class="column_half left_half">
       <h2 class="column_title"></h2>
