--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <article class="left_article">
       <h3>What's beyond linear?</h3>
       <p>Although you've been learning about linear models since kindergarten, the world we live in is not linear.</p>
-      <p>Maybe you don't believe that.  Let's take a look</p>
+      <p>Maybe you don't believe that.  Let's take a look.</p>
       <p>Click on the "virus" image below or the link above to investigate how a virus spreads.</p>
     </article>
     <!--
